traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:26: error: unclosed character literal
  ecrireMessage('48')
                ^TraversalByColumn:26: error: unclosed character literal
  ecrireMessage('48')
                   ^TraversalByColumn:26: error: illegal start of simple expression
  ecrireMessage('48')
                ^TraversalByColumn:27: error: ')' expected but '}' found.
} 
^TraversalByColumn:30: error: ';' expected but 'def' found.
	override def forward(i:Int)  { 
                 ^