traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def fonctionTest():Boolean = {
 var x:Int=getX()
 var y:Int=getY()
 var absMax:Int=getMondeLargeur()
 var ordMax:Int=getMondeHauteur()
 if (x==absMAx && y==ordMax) {
   return true
 } else {
   return false
 }
}


override def run() {
  while(!fonctionTest()){
  	var x:Int=getX()
 	 	var y:Int=getY()
  	var absMax:Int=getMondeLargeur()
		var ordMax:Int=getMondeHauteur()
  	ecrireMessage(compteur)
  	compteur = compteur + 1
  	(x,y) match {
    	case (i,j) if j==ordMax => setPos(i+1,0)
    	case _ => setPos(i+1,j+1)    
  	}
	}
	ecrireMessage('48')
}